--- a/index.html
+++ b/index.html
@@ -1,16 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Memory with My Love</title>
-    <link rel="stylesheet" href="style.css">
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Memory with My Love</title>
+        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    </head>
+    
 <body>
     <header>
         <h1>Memories Together</h1>
-        <button id="logoutButton" class="logout-btn">Logout</button>
+        <button id="logoutButton" class="logout-btn">
+            <i class="fas fa-sign-out-alt"></i> <!-- Ikon logout -->
+        </button>
     </header>
+    
 
     <section class="photos-section">
         <div class="photo-box">
